[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.4",
    "newsapi-python>=0.2.7",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "ta>=0.11.0",
    "textblob>=0.19.0",
    "xlsxwriter>=3.2.5",
    "yfinance>=0.2.65",
]
